started documentation and improved README

--- a/help.html
+++ b/help.html
@@ -6,8 +6,19 @@
 </head>
 <body>
 <h1>3D Image Reconstruction of a Human Torso</h1>
+<p>
+    For better and more complete documentation, go to: <a href="https://github.com/luantran/CapstoneProject/">https://github.com/luantran/CapstoneProject/</a>
+    This is where the open-source code for this software is located.
+</p>
 <h3>Loading the modalities</h3>
-<h5>X-Ray</h5>
-<h5>Surface</h5>
+<p>
+    Before starting you must load the three modalities into the software. CLicking the first three buttons will allow you to do so.
+    The text next to each button will confirm if you loaded the three modalities successfully.
+</p>
+<h3>Loading the landmarks</h3>
+<p>
+    Next, you will need to load the landmarks. Note that these do not need to be done in order.
+</p>
+
 </body>
 </html>
